[B] Fix misalignment in user nav dropdown
[Delivers #134087173]

--- a/app/assets/stylesheets/partials/_components_dropdowns.scss
+++ b/app/assets/stylesheets/partials/_components_dropdowns.scss
@@ -113,8 +113,8 @@
 
 .user-nav--options {
   @extend %dropdown-options;
-  width: calc(100% - 46px);
-  right: 46px !important;
+  width: calc(100% - 45px);
+  right: 45px !important;
   padding: 15px;
   top: 45px;
 
